Fixed btn wrap

--- a/app/assets/stylesheets/partials/theme/_main-container.scss
+++ b/app/assets/stylesheets/partials/theme/_main-container.scss
@@ -5,12 +5,14 @@
     max-width: $siteMaxWidth;
     min-width: 1000px;
     margin   : auto;
-    padding  : 1em 0;
+    padding  : 1em;
     @include media-query(lap) {
         min-width: 0;
+        padding  : 8px;
     }
     @include media-query(palm) {
         min-width: 0;
+        padding  : 8px;
     }
     @media screen and (min-width: 1200px) {
         max-width: 1185px;
